# RAG-Chat

./: .env.example  .gitignore  AWS-DEPLOYMENT.md  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  apprunner.yaml  cors.json  database.py  deploy-lambda.ps1  deploy-lambda.sh  logger.py  main.py  pyproject.toml  requirements.txt
backend/data/: .gitkeep
backend/models/: db_models.py  schemas.py
backend/routers/: chat.py  files.py  health.py  history.py  logs.py  upload.py
backend/services/: rag_service.py
backend/src/: data_loader.py  embedding.py  mongodb_store.py  search.py  vectorstore.py
data/chromadb_data/: chroma.sqlite3
data/chromadb_data/7cdf64f9-daea-4718-8708-3b537ba7c0fc/: index_metadata.pickle
faiss_store/: metadata.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatHistory.jsx  ChatInterface.jsx  CitationCard.jsx  FileSelector.jsx  FileUpload.jsx  MessageBubble.jsx
frontend/src/services/: api.js
notebook/: document.ipynb  pdf_loader.ipynb
src/: search.py
